# local-migrator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.rst  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: base_cbor_example.py  base_example.py
src/local_migrator/: __init__.py  _class_register.py  _serialize_hooks.py  _testsupport.py
src/nme/: __init__.py  _class_register.py  _json_hooks.py  _serialize_hooks.py  _testsupport.py
src/tests/: class_register_util.py  conftest.py  nme_fail.py  test_cbor_hooks.py  test_class_register.py  test_json_hooks.py
