[project]
name = "nme"
description = "Package for simplify data structures migrations"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["napari", "migration", "persistance"]
authors = [
  {email = "g.bokota@uw.edu.pl"},
  {name = "Grzegorz Bokota"}
]
maintainers = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "packaging",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
  "pytest > 7.0.0",
  "pydantic",
  "numpy",
  "napari; python_version < '3.11'",
]
cbor = [
    "cbor2"
]

[project.entry-points.pytest11]
nme = "nme._testsupport"

[project.urls]
Homepage = "https://github.com/Czaki/nme"
Documentation = "https://nme.readthedocs.io/en/latest/"
Repository = "https://github.com/Czaki/nme"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "setuptools_scm[toml]>=6.4"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ""
testpaths = [
    "src/tests",
]

[tool.setuptools_scm]
write_to = "src/nme/version.py"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | package/PartSeg/version.py
)
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "U", "C", "A" ,"YTT"]
ignore = ["A003"]
exclude = ["examples/call_simple_threshold.py"]
target-version = "py37"
fix = true

[tool.ruff.isort]
known-first-party=['nme']


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["A001"]
